tests/files/parser_tests/should_fail/083.cmdr
//Should not parse string interpolation due to statement instead of expression
x = "${if (true) { x = 5; } }";
